--- a/paper.adoc
+++ b/paper.adoc
@@ -110,7 +110,7 @@ This is however by no means a very rigorous test and is only meant to display TO
 
 As expected the tests on the two different GPUs I own show that on smaller vector sizes it is much faster to run on the CPU, but that as the amount of data increases the GPU gets better and better.
 
-== Some More Advances Features
+== Some More Advanced Features
 
 === Grids, Blocks, Threads & Multidimensional Execution
 
@@ -119,7 +119,7 @@ You might have noticed that when previously worked with the blocks and threads w
 Say we want to do some processing on some image, doing some computation on each indevidual pixel. While we could use our previous 1D approach like with the vector CUDA has a much nicer approach for splitting up the workload. 
 
 .Structure of Blocks and their Threads, source: CUDA C Programming Guide www.nvidia.com
-image::Images/2DBlocks.png[TODO fix picture, width=400]
+image::Images/2DBlocks.png[TODO fix picture, width=300]
 
 In the picture above is shown how it would look if you were to creat a grid with block dimensions of 3x2 and thread dimension of 4x3. The brackets for each Block/Thread denote their respective BlockIdx.x and BlockIdx.y. This can be done by calling below code:
 
@@ -140,7 +140,7 @@ While the absence of this feature would not necissarily keep us from doing any c
 
 I hope the graphics help in understanding the concept of the CUDA hierarchy and how it works in multiple dimensions. While not shown here, the same process/concept works also for the 3rd dimension allowing for processing of volumes, tensors, etc. 
 
-TODO example 
+==== Example Of 2D Processing: Matrix Multiplication
 
 === Synchronization
 
@@ -153,7 +153,7 @@ As previously stated the threads in a block actually have the capacity to comuni
 A CUDA GPU has several different types of memory organized into a straightforward hierarchy displayed in the picture below. Knowing where to optimally place ones data can have huge performance implications and is one of the most important topics when looking at optimization.
 
 .Diagram of the CUDA memory hierarchy, source: Programming Massively Parallel Processors
-image::Images/Memory.png[TODO fix picture]
+image::Images/Memory.png[TODO fix picture, width = 300]
 
 Lets take a look at the roles of the differnt memory types:
 
