--- a/paper.adoc
+++ b/paper.adoc
@@ -127,7 +127,7 @@ someKernel<<<grid, block>>>(someData);
 
 And below is how it would look if we process some small picture, with each thread handeling one pixel. While not displayed in the picture we of course must keep in mind to properly compute the correct indecies of the pixel we are processing like in our program from before using BlockDim.x, but additionally using BlockDim.y.
 
-.Example of how one would assign threads to indeidual pixels of a picture using a 2D Block/Thread setup
+.Example of how one would assign threads to indeidual pixels of a picture using a 2D Block/Thread setup, source: Felix Kunaver :)
 image::Images/PictureExample.png[TODO fix picture]
 
 
@@ -185,21 +185,23 @@ Lets take a look at the roles of the differnt memory types:
 
 === Tiling
 
-TODO
-
 With our previous matrix multiplication example we are reading elements from out input matrices multiple times. For example, as shown in the picture below, both thread(0, 0) and thread(0, 1) will read the first row of our A input matrix from global memory. This is unefficiant and is likely to cause memory bandwidth issues. With tiling we will get our threads to cooperate on this reading, and load parts("tiles") of our data into shared local memory for faster overall access.
 
 .Diagram of the CUDA memory hierarchy, source: https://nichijou.co/cuda7-tiling/
 image::Images/tilingload.jpg[TODO fix picture, width = 300]
 
-One factor to look at whether to implement tiling is the ration of floating point operations to global memory loads for a kernel. Taking a look at our original code as shown below.
+One factor to look at whether to implement tiling is the ration of floating point operations to global memory loads for a kernel. Taking a look at our original code as shown below we can see both two read operations to our global memory and 2 floating point operations bringing us to an overall "Compute to Global Memory Access Ratio" (CGAM Ratio) of 1. The lower this ratio the more likely we are to have our performance be memory bound, the higher and we are compute bound. To see where we lie we have to take a look at the hardware we are running our code on, for this example lets look at the top of the line Nvidia H100. It has a global memory bandwidth of 3TB/sec and compute performance of 60Terra floating-point operations per second (FLOPS). Each floating point element we are reading is 4 bytes so we can at maximum compute at 0.75Terra FLOPS because 3TB/4B = 0.75T, and our CGAM Ratio of 1. This is way below what the H100 would be capapble of with its 60Terra FLOPS and we are severly memory bound. If we can get our CGAM Ratio to be higher, meaning more operations per memory load, then we would be able to use more of our compute capabilities. Say with a ratio of 10, we would be able to compute at 7.5Terra FLOPS instead of our original 0.75TFLOPS. 
 
-.Diagram of the CUDA memory hierarchy, source: https://nichijou.co/cuda7-tiling/
+.Diagram of the CUDA memory hierarchy, source: Felix Kunaver :)
 image::Images/RatioMatrix.png[TODO fix picture, width = 500]
+
+When tiling we eleviate this issue somewhat by getting rid of duplicate global memory reads by different threads in the same block.
+
+Since for our simplified example we assume the input and output matrices to be of the same size, we can solve this duplicate memory issue by giving each thread first the task to load their respective elements from input into shared memory. Thread(0, 0), computing elemnt (0, 0) in the output matrix loads elemnt (0, 0) from both input A and B, thread(0, 1) does the same with elements (0, 1) and so on. However, since our shared memory is obviously smaller than the global one we will usaually not be able to load all the data into shared memory at once so we only load a smaller chunk aka. "Tile". 
 
 === Tiling Example: Matrix Multiplication Optimization 
 
-We start off our tiled kernel by declaring our shared memory versions of our input matrices using the \\__shared__ keyword. Note that we can use a two-dimensional array for the shared matrices as the size, eg. the tile size, is known at compile time. One could also modify the program so that the tile size is adjusted based on the provided hardware, then the code would also have to be modified to use our "flattend" array as previously shown.
+We start off our tiled kernel by declaring our shared memory versions of our input matrices using the \\__shared__ keyword. Note that we can use a two-dimensional array for the shared matrices as the size, eg. the tile size, is known at compile time. One could also modify the program so that the tile size is adjusted based on the provided hardware, then the code would also have to be modified to use our "flattend" array as previously shown. 
 
 [, cpp]
 ----
